# foodtruck-menu

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs  models.rs
src/routes/: api.rs  pages.rs
static/: admin.css  frontdesk.css  kitchen.css  style.css
templates/: admin.html  frontdesk.html  kitchen.html
